--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
+                <configuration>
+           <archive>
+          <manifest>
+            <addClasspath>true</addClasspath>
+            <classpathPrefix>lib/</classpathPrefix>
+            <mainClass>test.Base</mainClass>
+          </manifest>
+        </archive>
+      </configuration>
             </plugin>
         </plugins>
     </build>
